SNG-1: fixing overflow container
Removed overflow styling as it was causing too much trouble

wrapped songs card in visibility, which triggers everytime the top is x
pixels close to the bottom
this will cause the music player to be quite hidden for now

--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,11 @@
 }
 
 .song-card-container {
-  height: 60vh;
+  display:table;
+}
+
+.song-column-item{
+  padding:3px !important;
 }
 
 .song-card-container .song-card {
